# public-recharging-tenants

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
data/example_data/: example_electric_invoice_2.csv  example_gas_invoice.csv  example_tenant_readings.csv  example_water_invoice.csv
data/example_results/Test Site_March_2023/: commercial_charges.csv  historical_charges.csv  historical_readings.csv  new_form.csv  resident_charges.csv
docs/: import_data.md  index.md  report.md
notebooks/: Demo_notebook.ipynb
site/: 404.html  index.html  objects.inv  styles.css
site/import_data/: index.html
site/report/: index.html
site/search/: search_index.json
src/data/: import_data.py  schema.py
src/models/: report.py
