[tool.poetry]
name = "recharing-tenants"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "recharing_tenants"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
ipykernel = "^6.21.3"
openpyxl = "^3.1.1"
xlrd = "^2.0.1"
mkdocstrings = "^0.24.1"
mkdocs-material = "^9.5.13"
mkdocstrings-python = "^1.9.0"
mkdocs-autorefs = "^1.0.1"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pytest = "^7.2.2"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
